--- a/public/main.html
+++ b/public/main.html
@@ -26,7 +26,7 @@
 
 				<div class="join">
 					<div class="input-group">
-						<input type="text" class="form-control input-lg" placeholder="Party id" ng-init="" ng-model="room_id">
+						<input type="text" class="form-control input-lg" placeholder="ID" ng-init="" ng-model="room_id">
 						<span class="input-group-btn">
 							<button class="btn btn-default btn-lg" type="button" ng-click="join()">Join party!</button>
 						</span>
