--- a/public/server.html
+++ b/public/server.html
@@ -51,7 +51,7 @@
 		<br>
 
 		<div class="row">
-			<div ng-show="showPlayer">
+			<div class="col-md-12" ng-show="showPlayer">
 				<center>
 					<youtube-video player-vars="youtubePlayerVars" video-id="youtubeVideoId" player="youtubePlayer"></youtube-video>
 				</center>
@@ -62,12 +62,12 @@
 
 		<div class="row">
 			<div class="item col-md-10" ng-repeat="item in queue | orderBy: queueSorter | limitTo: 4" id="{{item.id}}">
-				<img class="thumbnail" ng-src="{{item.thumbnail}}" />
+				<div class="song_thumbnail" ng-style="{'background-image': 'url(' + item.thumbnail + ')'}"></div>
 				<span class="deets">
 					<div class="name">{{item.name}}</div>
 				</span>
-				<span class="upvotes" ng-class="{'upvotes_green': item.upvotes > item.downvotes, 'upvotes_red': item.upvotes < item.downvotes}">
-					{{item.upvotes - item.downvotes}}
+				<span class="votecount" ng-class="{'upvotes_green': item.upvotes > item.downvotes, 'upvotes_red': item.upvotes < item.downvotes}">
+						{{item.upvotes - item.downvotes}}
 				</span>
 				<div style="clear: both;"></div>
 			</div>
