--- a/public/main.html
+++ b/public/main.html
@@ -1,4 +1,4 @@
-<div id="wrapper" ng-controller="mainCtrl">	
+<div id="wrapper" class="container-fluid" ng-controller="mainCtrl">	
 	<div class="row">
 		<div class="col-md-12">
 			<div id="header-wrap">
